@@ -967,6 +967,14 @@ struct AstAssignW : public AstNodeAssign {
 	: AstNodeAssign(fileline, lhsp, rhsp) { }
     ASTNODE_NODE_FUNCS(AssignW, ASSIGNW)
     virtual AstNode* cloneType(AstNode* lhsp, AstNode* rhsp) { return new AstAssignW(this->fileline(), lhsp, rhsp); }
+    AstAlways* convertToAlways() {
+	AstNode* lhs1p = lhsp()->unlinkFrBack();
+	AstNode* rhs1p = rhsp()->unlinkFrBack();
+	AstAlways* newp = new AstAlways (fileline(), NULL,
+					 new AstAssign (fileline(), lhs1p, rhs1p));
+	replaceWith(newp); // User expected to then deleteTree();
+	return newp;
+    }
 };
 
 struct AstPull : public AstNode {
@@ -1428,6 +1436,8 @@ struct AstWhile : public AstNodeStmt {
     virtual int instrCount()	const { return instrCountBranch(); }
     virtual V3Hash sameHash() const { return V3Hash(); }
     virtual bool same(AstNode* samep) const { return true; }
+    virtual void addBeforeStmt(AstNode* newp, AstNode* belowp);  // Stop statement searchback here 
+    virtual void addNextStmt(AstNode* newp, AstNode* belowp);  // Stop statement searchback here 
 };
 
 struct AstGenIf : public AstNodeIf {
